magicdb/magicdbParser.py
# Generated from magicdbParser.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class magicdbParser ( Parser ):

    grammarFileName = "magicdbParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'.'", "'('", "')'", "','", "'='", 
                     "'*'", "'\"'", "'PROPERTIES'", "'WITH'", "'DROP'", 
                     "'DATABASE'", "'IF'", "'EXISTS'", "'SHOW'", "'DATABASES'", 
                     "'CREATE'", "'NOT'", "'MACHINES'", "'ALTER'", "'UPDATE'", 
                     "'CURRENT'", "'MACHINE'", "'ADD'", "'TABLE'", "'DESC'", 
                     "'DESCRIBE'", "'VERSIONS'", "'VERSION'", "'SET'", "'LOAD'", 
                     "'DATA'", "'INTO'", "'SELECT'", "'FROM'", "'WHERE'", 
                     "'KEY'", "'TABLES'", "'TRUE'", "'FALSE'" ]

    symbolicNames = [ "<INVALID>", "SCOL", "DOT", "OPEN_PAR", "CLOSE_PAR", 
                      "COMMA", "ASSIGN", "STAR", "QUOTA", "PROPERTIES", 
                      "WITH", "DROP", "DATABASE", "IF", "EXISTS", "SHOW", 
                      "DATABASES", "CREATE", "NOT", "MACHINES", "ALTER", 
                      "UPDATE", "CURRENT", "MACHINE", "ADD", "TABLE", "DESC", 
                      "DESCRIBE", "VERSIONS", "VERSION", "SET", "LOAD", 
                      "DATA", "INTO", "SELECT", "FROM", "WHERE", "KEY", 
                      "TABLES", "TRUE", "FALSE", "VARNAME", "STRING", "NUMBER", 
                      "SINGLE_LINE_COMMENT", "MULTILINE_COMMENT", "WS" ]

    RULE_parse = 0
    RULE_command_list = 1
    RULE_command = 2
    RULE_database_cmd = 3
    RULE_drop_database = 4
    RULE_show_databases = 5
    RULE_create_database = 6
    RULE_machine_cmd = 7
    RULE_show_machines = 8
    RULE_delete_machine = 9
    RULE_add_machine = 10
    RULE_table_cmd = 11
    RULE_show_tables = 12
    RULE_drop_table = 13
    RULE_create_table = 14
    RULE_desc_table = 15
    RULE_version_cmd = 16
    RULE_show_versions = 17
    RULE_show_current_version = 18
    RULE_update_version = 19
    RULE_drop_version = 20
    RULE_load_data = 21
    RULE_select_data = 22
    RULE_properties = 23
    RULE_table = 24
    RULE_database_name = 25
    RULE_pair = 26
    RULE_value = 27

    ruleNames =  [ "parse", "command_list", "command", "database_cmd", "drop_database", 
                   "show_databases", "create_database", "machine_cmd", "show_machines", 
                   "delete_machine", "add_machine", "table_cmd", "show_tables", 
                   "drop_table", "create_table", "desc_table", "version_cmd", 
                   "show_versions", "show_current_version", "update_version", 
                   "drop_version", "load_data", "select_data", "properties", 
                   "table", "database_name", "pair", "value" ]

    EOF = Token.EOF
    SCOL=1
    DOT=2
    OPEN_PAR=3
    CLOSE_PAR=4
    COMMA=5
    ASSIGN=6
    STAR=7
    QUOTA=8
    PROPERTIES=9
    WITH=10
    DROP=11
    DATABASE=12
    IF=13
    EXISTS=14
    SHOW=15
    DATABASES=16
    CREATE=17
    NOT=18
    MACHINES=19
    ALTER=20
    UPDATE=21
    CURRENT=22
    MACHINE=23
    ADD=24
    TABLE=25
    DESC=26
    DESCRIBE=27
    VERSIONS=28
    VERSION=29
    SET=30
    LOAD=31
    DATA=32
    INTO=33
    SELECT=34
    FROM=35
    WHERE=36
    KEY=37
    TABLES=38
    TRUE=39
    FALSE=40
    VARNAME=41
    STRING=42
    NUMBER=43
    SINGLE_LINE_COMMENT=44
    MULTILINE_COMMENT=45
    WS=46

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ParseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command_list(self):
            return self.getTypedRuleContext(magicdbParser.Command_listContext,0)


        def EOF(self):
            return self.getToken(magicdbParser.EOF, 0)

        def getRuleIndex(self):
            return magicdbParser.RULE_parse

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParse" ):
                listener.enterParse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParse" ):
                listener.exitParse(self)




    def parse(self):

        localctx = magicdbParser.ParseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parse)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.command_list()
            self.state = 57
            self.match(magicdbParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Command_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(magicdbParser.CommandContext)
            else:
                return self.getTypedRuleContext(magicdbParser.CommandContext,i)


        def SCOL(self, i:int=None):
            if i is None:
                return self.getTokens(magicdbParser.SCOL)
            else:
                return self.getToken(magicdbParser.SCOL, i)

        def getRuleIndex(self):
            return magicdbParser.RULE_command_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand_list" ):
                listener.enterCommand_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand_list" ):
                listener.exitCommand_list(self)




    def command_list(self):

        localctx = magicdbParser.Command_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_command_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 59
                self.match(magicdbParser.SCOL)
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 65
            self.command()
            self.state = 74
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 67 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 66
                        self.match(magicdbParser.SCOL)
                        self.state = 69 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==1):
                            break

                    self.state = 71
                    self.command() 
                self.state = 76
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 77
                self.match(magicdbParser.SCOL)
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def database_cmd(self):
            return self.getTypedRuleContext(magicdbParser.Database_cmdContext,0)


        def machine_cmd(self):
            return self.getTypedRuleContext(magicdbParser.Machine_cmdContext,0)


        def table_cmd(self):
            return self.getTypedRuleContext(magicdbParser.Table_cmdContext,0)


        def version_cmd(self):
            return self.getTypedRuleContext(magicdbParser.Version_cmdContext,0)


        def load_data(self):
            return self.getTypedRuleContext(magicdbParser.Load_dataContext,0)


        def select_data(self):
            return self.getTypedRuleContext(magicdbParser.Select_dataContext,0)


        def getRuleIndex(self):
            return magicdbParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)




    def command(self):

        localctx = magicdbParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_command)
        try:
            self.state = 89
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                self.database_cmd()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 84
                self.machine_cmd()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 85
                self.table_cmd()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 86
                self.version_cmd()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 87
                self.load_data()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 88
                self.select_data()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Database_cmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def drop_database(self):
            return self.getTypedRuleContext(magicdbParser.Drop_databaseContext,0)


        def show_databases(self):
            return self.getTypedRuleContext(magicdbParser.Show_databasesContext,0)


        def create_database(self):
            return self.getTypedRuleContext(magicdbParser.Create_databaseContext,0)


        def getRuleIndex(self):
            return magicdbParser.RULE_database_cmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDatabase_cmd" ):
                listener.enterDatabase_cmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDatabase_cmd" ):
                listener.exitDatabase_cmd(self)




    def database_cmd(self):

        localctx = magicdbParser.Database_cmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_database_cmd)
        try:
            self.state = 94
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.drop_database()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.show_databases()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 3)
                self.state = 93
                self.create_database()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Drop_databaseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DROP(self):
            return self.getToken(magicdbParser.DROP, 0)

        def DATABASE(self):
            return self.getToken(magicdbParser.DATABASE, 0)

        def database_name(self):
            return self.getTypedRuleContext(magicdbParser.Database_nameContext,0)


        def IF(self):
            return self.getToken(magicdbParser.IF, 0)

        def EXISTS(self):
            return self.getToken(magicdbParser.EXISTS, 0)

        def getRuleIndex(self):
            return magicdbParser.RULE_drop_database

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDrop_database" ):
                listener.enterDrop_database(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDrop_database" ):
                listener.exitDrop_database(self)




    def drop_database(self):

        localctx = magicdbParser.Drop_databaseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_drop_database)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(magicdbParser.DROP)
            self.state = 97
            self.match(magicdbParser.DATABASE)
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 98
                self.match(magicdbParser.IF)
                self.state = 99
                self.match(magicdbParser.EXISTS)


            self.state = 102
            self.database_name()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Show_databasesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SHOW(self):
            return self.getToken(magicdbParser.SHOW, 0)

        def DATABASES(self):
            return self.getToken(magicdbParser.DATABASES, 0)

        def getRuleIndex(self):
            return magicdbParser.RULE_show_databases

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShow_databases" ):
                listener.enterShow_databases(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShow_databases" ):
                listener.exitShow_databases(self)




    def show_databases(self):

        localctx = magicdbParser.Show_databasesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_show_databases)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(magicdbParser.SHOW)
            self.state = 105
            self.match(magicdbParser.DATABASES)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Create_databaseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CREATE(self):
            return self.getToken(magicdbParser.CREATE, 0)

        def DATABASE(self):
            return self.getToken(magicdbParser.DATABASE, 0)

        def database_name(self):
            return self.getTypedRuleContext(magicdbParser.Database_nameContext,0)


        def properties(self):
            return self.getTypedRuleContext(magicdbParser.PropertiesContext,0)


        def IF(self):
            return self.getToken(magicdbParser.IF, 0)

        def NOT(self):
            return self.getToken(magicdbParser.NOT, 0)

        def EXISTS(self):
            return self.getToken(magicdbParser.EXISTS, 0)

        def getRuleIndex(self):
            return magicdbParser.RULE_create_database

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreate_database" ):
                listener.enterCreate_database(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreate_database" ):
                listener.exitCreate_database(self)




    def create_database(self):

        localctx = magicdbParser.Create_databaseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_create_database)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(magicdbParser.CREATE)
            self.state = 108
            self.match(magicdbParser.DATABASE)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 109
                self.match(magicdbParser.IF)
                self.state = 110
                self.match(magicdbParser.NOT)
                self.state = 111
                self.match(magicdbParser.EXISTS)


            self.state = 114
            self.database_name()
            self.state = 115
            self.properties()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Machine_cmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def show_machines(self):
            return self.getTypedRuleContext(magicdbParser.Show_machinesContext,0)


        def delete_machine(self):
            return self.getTypedRuleContext(magicdbParser.Delete_machineContext,0)


        def add_machine(self):
            return self.getTypedRuleContext(magicdbParser.Add_machineContext,0)


        def getRuleIndex(self):
            return magicdbParser.RULE_machine_cmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMachine_cmd" ):
                listener.enterMachine_cmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMachine_cmd" ):
                listener.exitMachine_cmd(self)




    def machine_cmd(self):

        localctx = magicdbParser.Machine_cmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_machine_cmd)
        try:
            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.show_machines()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.delete_machine()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 119
                self.add_machine()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Show_machinesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SHOW(self):
            return self.getToken(magicdbParser.SHOW, 0)

        def MACHINES(self):
            return self.getToken(magicdbParser.MACHINES, 0)

        def database_name(self):
            return self.getTypedRuleContext(magicdbParser.Database_nameContext,0)


        def getRuleIndex(self):
            return magicdbParser.RULE_show_machines

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShow_machines" ):
                listener.enterShow_machines(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShow_machines" ):
                listener.exitShow_machines(self)




    def show_machines(self):

        localctx = magicdbParser.Show_machinesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_show_machines)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(magicdbParser.SHOW)
            self.state = 123
            self.match(magicdbParser.MACHINES)
            self.state = 124
            self.database_name()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Delete_machineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ALTER(self):
            return self.getToken(magicdbParser.ALTER, 0)

        def DATABASE(self):
            return self.getToken(magicdbParser.DATABASE, 0)

        def database_name(self):
            return self.getTypedRuleContext(magicdbParser.Database_nameContext,0)


        def DROP(self):
            return self.getToken(magicdbParser.DROP, 0)

        def MACHINE(self):
            return self.getToken(magicdbParser.MACHINE, 0)

        def OPEN_PAR(self):
            return self.getToken(magicdbParser.OPEN_PAR, 0)

        def STRING(self):
            return self.getToken(magicdbParser.STRING, 0)

        def CLOSE_PAR(self):
            return self.getToken(magicdbParser.CLOSE_PAR, 0)

        def getRuleIndex(self):
            return magicdbParser.RULE_delete_machine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDelete_machine" ):
                listener.enterDelete_machine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDelete_machine" ):
                listener.exitDelete_machine(self)




    def delete_machine(self):

        localctx = magicdbParser.Delete_machineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_delete_machine)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(magicdbParser.ALTER)
            self.state = 127
            self.match(magicdbParser.DATABASE)
            self.state = 128
            self.database_name()
            self.state = 129
            self.match(magicdbParser.DROP)
            self.state = 130
            self.match(magicdbParser.MACHINE)
            self.state = 131
            self.match(magicdbParser.OPEN_PAR)
            self.state = 132
            self.match(magicdbParser.STRING)
            self.state = 133
            self.match(magicdbParser.CLOSE_PAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Add_machineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ALTER(self):
            return self.getToken(magicdbParser.ALTER, 0)

        def DATABASE(self):
            return self.getToken(magicdbParser.DATABASE, 0)

        def database_name(self):
            return self.getTypedRuleContext(magicdbParser.Database_nameContext,0)


        def ADD(self):
            return self.getToken(magicdbParser.ADD, 0)

        def MACHINE(self):
            return self.getToken(magicdbParser.MACHINE, 0)

        def OPEN_PAR(self):
            return self.getToken(magicdbParser.OPEN_PAR, 0)

        def STRING(self):
            return self.getToken(magicdbParser.STRING, 0)

        def CLOSE_PAR(self):
            return self.getToken(magicdbParser.CLOSE_PAR, 0)

        def getRuleIndex(self):
            return magicdbParser.RULE_add_machine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdd_machine" ):
                listener.enterAdd_machine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdd_machine" ):
                listener.exitAdd_machine(self)




    def add_machine(self):

        localctx = magicdbParser.Add_machineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_add_machine)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(magicdbParser.ALTER)
            self.state = 136
            self.match(magicdbParser.DATABASE)
            self.state = 137
            self.database_name()
            self.state = 138
            self.match(magicdbParser.ADD)
            self.state = 139
            self.match(magicdbParser.MACHINE)
            self.state = 140
            self.match(magicdbParser.OPEN_PAR)
            self.state = 141
            self.match(magicdbParser.STRING)
            self.state = 142
            self.match(magicdbParser.CLOSE_PAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Table_cmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def show_tables(self):
            return self.getTypedRuleContext(magicdbParser.Show_tablesContext,0)


        def drop_table(self):
            return self.getTypedRuleContext(magicdbParser.Drop_tableContext,0)


        def create_table(self):
            return self.getTypedRuleContext(magicdbParser.Create_tableContext,0)


        def desc_table(self):
            return self.getTypedRuleContext(magicdbParser.Desc_tableContext,0)


        def getRuleIndex(self):
            return magicdbParser.RULE_table_cmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTable_cmd" ):
                listener.enterTable_cmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTable_cmd" ):
                listener.exitTable_cmd(self)




    def table_cmd(self):

        localctx = magicdbParser.Table_cmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_table_cmd)
        try:
            self.state = 148
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [15]:
                self.enterOuterAlt(localctx, 1)
                self.state = 144
                self.show_tables()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 145
                self.drop_table()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 3)
                self.state = 146
                self.create_table()
                pass
            elif token in [26, 27]:
                self.enterOuterAlt(localctx, 4)
                self.state = 147
                self.desc_table()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Show_tablesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SHOW(self):
            return self.getToken(magicdbParser.SHOW, 0)

        def TABLES(self):
            return self.getToken(magicdbParser.TABLES, 0)

        def database_name(self):
            return self.getTypedRuleContext(magicdbParser.Database_nameContext,0)


        def getRuleIndex(self):
            return magicdbParser.RULE_show_tables

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShow_tables" ):
                listener.enterShow_tables(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShow_tables" ):
                listener.exitShow_tables(self)




    def show_tables(self):

        localctx = magicdbParser.Show_tablesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_show_tables)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(magicdbParser.SHOW)
            self.state = 151
            self.match(magicdbParser.TABLES)
            self.state = 152
            self.database_name()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Drop_tableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DROP(self):
            return self.getToken(magicdbParser.DROP, 0)

        def TABLE(self):
            return self.getToken(magicdbParser.TABLE, 0)

        def table(self):
            return self.getTypedRuleContext(magicdbParser.TableContext,0)


        def IF(self):
            return self.getToken(magicdbParser.IF, 0)

        def EXISTS(self):
            return self.getToken(magicdbParser.EXISTS, 0)

        def getRuleIndex(self):
            return magicdbParser.RULE_drop_table

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDrop_table" ):
                listener.enterDrop_table(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDrop_table" ):
                listener.exitDrop_table(self)




    def drop_table(self):

        localctx = magicdbParser.Drop_tableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_drop_table)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(magicdbParser.DROP)
            self.state = 155
            self.match(magicdbParser.TABLE)
            self.state = 158
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 156
                self.match(magicdbParser.IF)
                self.state = 157
                self.match(magicdbParser.EXISTS)


            self.state = 160
            self.table()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Create_tableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CREATE(self):
            return self.getToken(magicdbParser.CREATE, 0)

        def TABLE(self):
            return self.getToken(magicdbParser.TABLE, 0)

        def table(self):
            return self.getTypedRuleContext(magicdbParser.TableContext,0)


        def properties(self):
            return self.getTypedRuleContext(magicdbParser.PropertiesContext,0)


        def IF(self):
            return self.getToken(magicdbParser.IF, 0)

        def NOT(self):
            return self.getToken(magicdbParser.NOT, 0)

        def EXISTS(self):
            return self.getToken(magicdbParser.EXISTS, 0)

        def getRuleIndex(self):
            return magicdbParser.RULE_create_table

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreate_table" ):
                listener.enterCreate_table(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreate_table" ):
                listener.exitCreate_table(self)




    def create_table(self):

        localctx = magicdbParser.Create_tableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_create_table)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(magicdbParser.CREATE)
            self.state = 163
            self.match(magicdbParser.TABLE)
            self.state = 167
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 164
                self.match(magicdbParser.IF)
                self.state = 165
                self.match(magicdbParser.NOT)
                self.state = 166
                self.match(magicdbParser.EXISTS)

